--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                 <span class="nav-sep"></span>
                 <a href="{{ url_for('world_map') }}"><img src="{{ url_for('static', filename='icons/map.png') }}" alt="" class="nav-icon">Map</a>
                 <span class="nav-sep"></span>
-                <a href="{{ url_for('relations_graph') }}"><img src="{{ url_for('static', filename='icons/graph.png') }}" alt="" class="nav-icon" onerror="this.style.display='none'">Graph</a>
+                <a href="{{ url_for('relations_graph') }}"><img src="{{ url_for('static', filename='icons/written/StarChart.png') }}" alt="" class="nav-icon">Graph</a>
                 <span class="nav-sep"></span>
                 <a href="{{ url_for('events') }}"><img src="{{ url_for('static', filename='icons/scribe.png') }}" alt="" class="nav-icon">Events</a>
             </div>
