--- a/templates/output.html
+++ b/templates/output.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>Build Output</h1>
 
-<p><a href="{{ url_for('index') }}">&larr; Back to Dashboard</a></p>
+<p><a href="{{ url_for('worlds.index') }}">&larr; Back to Dashboard</a></p>
 
 <pre class="output">{{ output }}</pre>
 {% endblock %}
