--- a/static/style.css
+++ b/static/style.css
@@ -1495,11 +1495,21 @@ a:hover {
     image-rendering: pixelated;
 }
 
+.map-overlay-canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 1;
+}
+
 .map-marker {
     position: absolute;
     transform: translate(-50%, -50%);
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
     transition: transform 0.1s, z-index 0s;
     user-select: none;
     -webkit-user-select: none;
